[package]
name = "runtime-contracts"
version = "0.2.0"
edition = "2021"
description = "Structured, understandable runtime contracts."
authors = ["Jonathan E. Magen <59451+yonkeltron@users.noreply.github.com>"]
license = "Apache-2.0"
homepage = "https://github.com/yonkeltron/runtime-contracts"
repository = "https://github.com/yonkeltron/runtime-contracts.git"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"

[dev-dependencies]
pretty_assertions = "1.4.0"
